fix nội dung của admin