@@ -4,7 +4,6 @@ import java.time.Instant;
 import java.time.OffsetDateTime;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -19,6 +18,7 @@ import com.example.back_end.exception.ResourceNotFoundException;
 import com.example.back_end.repository.admin.AdminCourseRepository;
 import com.example.back_end.service.EmailService;
 import com.example.back_end.service.NotificationService;
+import com.example.back_end.service.S3Service;
 
 import jakarta.transaction.Transactional;
 import org.slf4j.Logger;
@@ -35,17 +35,32 @@ public class AdminCourseService {
     private final AdminCourseRepository courseRepository;
     private final NotificationService notificationService;
     private final EmailService emailService;
+    private final S3Service s3Service;
 
-    public AdminCourseService(AdminCourseRepository courseRepository, NotificationService notificationService, EmailService emailService) {
+    public AdminCourseService(
+            AdminCourseRepository courseRepository,
+            NotificationService notificationService,
+            EmailService emailService,
+            S3Service s3Service
+    ) {
         this.courseRepository = courseRepository;
         this.notificationService = notificationService;
         this.emailService = emailService;
+        this.s3Service = s3Service;
     }
 
     public List<AdminCourseResponse> getAllCourses() {
         return courseRepository.findAllWithInstructor().stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public String getThumbnailUrl(String thumbnailKey) {
+        if (thumbnailKey == null || thumbnailKey.trim().isEmpty()) {
+            throw new BusinessException("Thumbnail key is required.");
+        }
+
+        return s3Service.generateCloudFrontSignedUrl(thumbnailKey.trim());
     }
 
     public AdminCourseDetailResponse getCourseDetail(Long id) {
@@ -59,7 +74,7 @@ public class AdminCourseService {
                 .orElseThrow(() -> new ResourceNotFoundException("Course not found id=" + id));
 
         if (course.getStatus() != CourseStatus.PENDING_REVIEW) {
-            throw new BusinessException("Chỉ có thể duyệt khóa học đang ở trạng thái PENDING_REVIEW.");
+            throw new BusinessException("Only courses pending review can be approved.");
         }
 
         course.setStatus(CourseStatus.PUBLISHED);
@@ -86,7 +101,7 @@ public class AdminCourseService {
                 .orElseThrow(() -> new ResourceNotFoundException("Course not found id=" + id));
 
         if (course.getStatus() != CourseStatus.PENDING_REVIEW) {
-            throw new BusinessException("Chỉ có thể từ chối khóa học đang ở trạng thái PENDING_REVIEW.");
+            throw new BusinessException("Only courses pending review can be rejected.");
         }
 
         course.setStatus(CourseStatus.REJECTED);
@@ -111,7 +126,7 @@ public class AdminCourseService {
                 .orElseThrow(() -> new ResourceNotFoundException("Course not found id=" + id));
 
         if (course.getStatus() != CourseStatus.PENDING_REVIEW) {
-            throw new BusinessException("Chỉ có thể ẩn khóa học đang ở trạng thái PENDING_REVIEW.");
+            throw new BusinessException("Only courses pending review can be hidden.");
         }
 
         course.setStatus(CourseStatus.ARCHIVED);
